# graphenda-build

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 02-arquitetura-tecnica.md  03-hierarchical-cognitive-graph.md  08-desafios-tecnicos.md  README.md  SMOKE_TEST.md  guide.md  ontology-format-spec.md  technical-guide.md
docs/model_validation/: content-strategy.md  domains.md
docs/model_validation/domains/: run_all_domains.sh
docs/model_validation/domains/anomaly-detection/FASES/: 00_CONTENT_GENERATION_OVERVIEW.md  CONTENT_GEN_F1.md  CONTENT_GEN_F2.md  prompt.sh  (+3 more)
graphenda_build/: __init__.py  config.py
graphenda_build/community/: detector.py  summarizer.py
graphenda_build/core/: base_extractor.py  base_parser.py
graphenda_build/graph/: instance_manager.py  loader.py  schema.py
graphenda_build/hierarchy/: __init__.py  hierarchy_config.py  inter_level_linker.py  level_assigner.py  meta_community.py
graphenda_build/ingestion/: chunker.py  entity_resolver.py  pipeline.py  prompts.py  triple_extractor.py
graphenda_build/ingestion/parsers/: csv_parser.py  markdown_parser.py  notebook_parser.py  pdf_parser.py  python_parser.py  registry.py
graphenda_build/llm/: __init__.py  anthropic.py  base.py  gemini.py  internal_llm.py  internal_llm_agentic.py  ollama.py  openai.py  registry.py
graphenda_build/ontology/: manager.py  validator.py
graphenda_build/quality/: __init__.py
graphenda_build/registry/: __init__.py  publisher.py
infra/docker/: Dockerfile.build  entrypoint.sh
ontologies/: _schema.yaml
ontologies/ai_governance/: aliases.yaml  hierarchy.yaml  ontology.yaml  seed_entities.yaml
ontologies/bias_intelligence/: aliases.yaml  hierarchy.yaml  ontology.yaml  seed_entities.yaml
ontologies/icaap_validation/: aliases.yaml  hierarchy.yaml  ontology.yaml  seed_entities.yaml
ontologies/model_intelligence/: aliases.yaml  hierarchy.yaml  ontology.yaml  seed_entities.yaml
ontologies/model_validation/: aliases.yaml  ontology.yaml  seed_entities.yaml
ontologies/panelbox/: aliases.yaml  hierarchy.yaml  ontology.yaml  seed_entities.yaml
scripts/: build_hierarchy.py  create_instance.py  ingest.py
(+168 files in other folders)
