[project]
name = "graphenda-build"
version = "0.1.0"
description = "Graphenda Build — offline graph construction engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Graphenda"}]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]
dependencies = [
    "graphenda-shared @ git+file:///home/guhaase/projetos/Graphenda/graphenda-shared@v0.1.0",
    "neo4j>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "black>=24.0", "isort>=5.13", "mypy>=1.11", "pre-commit>=3.7"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[project.scripts]
graphenda-build-ingest = "graphenda_build.scripts.ingest:main"
graphenda-build-hierarchy = "graphenda_build.scripts.build_hierarchy:main"
graphenda-build-instance = "graphenda_build.scripts.create_instance:main"

[project.urls]
Homepage = "https://github.com/USER/graphenda-build"
Repository = "https://github.com/USER/graphenda-build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphenda_build"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["graphenda_build", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["graphenda_build", "graphenda_shared"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "integration: tests requiring Neo4j (skipped by default; run via docker-compose)",
]
